# hw_2_13_2

./: pyproject.toml
quotes/: authors.json  final_authors.json  final_quotes.json  final_tags.json  get_data_from_mongo.py  load_authors_to_db.py  load_quotes_to_db.py  load_tags_to_db.py
quotes/quotes/: authors.json  settings.py  urls.py
quotes/quotesapp/: forms.py  models.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py
quotes/quotesapp/static/quotesapp/: style.css
quotes/quotesapp/templates/quotesapp/: addauthor.html  addquote.html  addtag.html  author.html  base.html  index.html  tag.html
quotes/quotesapp/templatetags/: poll_extras.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: login.html  signup.html
